spring added. controllers + jwt auth + jdbc template